# musicapp

./: .gitignore  Dockerfile  docker-compose.yml  find_missing_songs.py  google_cloud_cli.md  nginx.conf  pyproject.toml
audios/: audio_processing.py  stft.py  tools.py  utils.py
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/models/: health_model.py  search_model.py
backend/app/services/: inteference.py  preprocessing.py  search.py
backend/app/utils/: file_manager.py
backend/cache/: faiss_metadata.pkl
model/: __init__.py  resnet.py  util.py
preprocessed/: group_to_title.csv
preprocessed/train/hum/: 001f2be7054f1b28_1_616d2185f49090d4.npy  001f2be7054f1b28_1_8ebf470b2c5dd9d9.npy  001f2be7054f1b28_1_9da4fcda15169156.npy  001f2be7054f1b28_1_a3d1a095cc2d9b66.npy  001f2be7054f1b28_1_d606fadbb07d9a48.npy  02064d84d52b1f83_1_2d82b64bca5390a0.npy  02064d84d52b1f83_1_7a7425fe9f826d41.npy  02064d84d52b1f83_1_b284f375bbe1c914.npy  02064d84d52b1f83_1_c915f2d1480b759a.npy  02064d84d52b1f83_2_1aa5dd2c05290ffd.npy  02064d84d52b1f83_2_3c4550e02d80ee27.npy  02064d84d52b1f83_2_752c26ad466cff2d.npy  02064d84d52b1f83_2_95c2e876e64473b2.npy  02064d84d52b1f83_2_9847c32e9c14103d.npy  02064d84d52b1f83_2_9f4b01430126f05b.npy  02064d84d52b1f83_2_b0d6c93b21a8c66a.npy  02064d84d52b1f83_2_c7c27d7826355d31.npy  02064d84d52b1f83_2_f4ce6b558d696f5b.npy  02064d84d52b1f83_3_11025f275c913c2e.npy  02064d84d52b1f83_3_7fe207b056b90a09.npy  02064d84d52b1f83_3_8b28e23b73f0e949.npy  (+4828 more)
scripts/: deploy.sh  google_cloud_cli.md  key.pem
(+645 files in other folders)
